crates/kul-wasm/tests/snapshots/check__failure_envelope_unresolved_reference.snap
---
source: crates/kul-wasm/tests/check.rs
expression: check_json(src)
---
{
  "diagnostics": [
    {
      "code": "KUL-R02",
      "severity": "error",
      "message": "no person with id `ghost` is declared in the project — check for a typo, or add a `person ghost …` declaration",
      "primary": {
        "file": "input.kul",
        "byteStart": 57,
        "byteEnd": 62,
        "line": 2,
        "column": 18
      },
      "related": []
    }
  ]
}
