crates/kul-wasm/tests/snapshots/check__failure_envelope_unresolved_reference_across_files.snap
---
source: crates/kul-wasm/tests/check.rs
assertion_line: 122
expression: check_multi_file_json(files)
---
{
  "diagnostics": [
    {
      "code": "KUL-R02",
      "severity": "error",
      "message": "no person with id `ghost` is declared in the project — check for a typo, or add a `person ghost …` declaration",
      "primary": {
        "file": "b.kul",
        "byteStart": 17,
        "byteEnd": 22,
        "line": 1,
        "column": 18
      },
      "related": []
    }
  ]
}
